k8s_manifests/go-ws/ingress_tls/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: go-ws
  annotations:
    certmanager.k8s.io/cluster-issuer: issuer-staging
    certmanager.k8s.io/acme-challenge-type: dns01
    certmanager.k8s.io/acme-dns01-provider: route53
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: go-ws-svc
              servicePort: 80
  tls:
    - hosts:
        - raca.ballab.com
      secretName: raca-ballab-com-tls-staging
